初始化基础架构

--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,14 @@
 			<version>21.0</version>
 		</dependency>
 
+		<!--腾讯云短信-->
+		<dependency>
+			<groupId>com.github.qcloudsms</groupId>
+			<artifactId>qcloudsms</artifactId>
+			<version>1.0.2</version>
+		</dependency>
+
+
 		<!--腾讯云COS-->
 		<dependency>
 			<groupId>com.qcloud</groupId>
