--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 #\u914D\u7F6Espring\u4E0D\u9700\u8981\u4ECEclasspath\u4E2D\u8BFB\u51FAshema.sql \u6587\u4EF6
 spring.datasource.initialize=false
 spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.url=jdbc:mysql://localhost/qna?useUnicode=yes&characterEncoding=UTF-8&autoReconnect=true&useSSL=false
+#spring.datasource.url=jdbc:mysql://localhost/zcsd?useUnicode=yes&characterEncoding=UTF-8&autoReconnect=true&useSSL=false
 #spring.datasource.username=root
 #spring.datasource.password=mellamoido123
 server.port=9000
