revise the template with removing unused file and adding some dependency

--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,14 @@
 			<version>21.0</version>
 		</dependency>
 
+		<!--腾讯云短信-->
+		<dependency>
+			<groupId>com.github.qcloudsms</groupId>
+			<artifactId>qcloudsms</artifactId>
+			<version>1.0.2</version>
+		</dependency>
+
+
 		<!--腾讯云COS-->
 		<dependency>
 			<groupId>com.qcloud</groupId>
@@ -115,6 +123,18 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.7.0</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>2.7.0</version>
+        </dependency>
+
 
 
 		<!--<dependency>-->
